--- a/Minsta/Supporting Files/LaunchScreen.storyboard
+++ b/Minsta/Supporting Files/LaunchScreen.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="10117" systemVersion="15E65" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" launchScreen="YES" useTraitCollections="YES" initialViewController="fTB-ws-6f8">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="10117" systemVersion="15F34" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" launchScreen="YES" useTraitCollections="YES" initialViewController="fTB-ws-6f8">
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="10085"/>
@@ -38,17 +38,18 @@
                         <rect key="frame" x="0.0" y="64" width="600" height="536"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <toolbar contentMode="scaleToFill" translucent="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ym2-Yi-zNJ">
-                                <rect key="frame" x="0.0" y="492" width="600" height="44"/>
+                            <tabBar contentMode="scaleToFill" translucent="NO" translatesAutoresizingMaskIntoConstraints="NO" id="YBj-ej-w76">
+                                <rect key="frame" x="0.0" y="487" width="600" height="49"/>
+                                <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
                                 <items/>
                                 <color key="barTintColor" red="0.97647058819999999" green="0.97647058819999999" blue="0.97647058819999999" alpha="1" colorSpace="calibratedRGB"/>
-                            </toolbar>
+                            </tabBar>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
                         <constraints>
-                            <constraint firstAttribute="trailing" secondItem="ym2-Yi-zNJ" secondAttribute="trailing" id="BTy-iW-6vW"/>
-                            <constraint firstItem="ym2-Yi-zNJ" firstAttribute="leading" secondItem="Ze5-6b-2t3" secondAttribute="leading" id="PO1-hk-Xxq"/>
-                            <constraint firstItem="xb3-aO-Qok" firstAttribute="top" secondItem="ym2-Yi-zNJ" secondAttribute="bottom" id="ra7-Hh-gQs"/>
+                            <constraint firstAttribute="trailing" secondItem="YBj-ej-w76" secondAttribute="trailing" id="56B-Bc-USs"/>
+                            <constraint firstItem="YBj-ej-w76" firstAttribute="leading" secondItem="Ze5-6b-2t3" secondAttribute="leading" id="cbI-Yx-rg0"/>
+                            <constraint firstItem="xb3-aO-Qok" firstAttribute="top" secondItem="YBj-ej-w76" secondAttribute="bottom" id="fDu-As-Zhy"/>
                         </constraints>
                     </view>
                     <navigationItem key="navigationItem" id="HNy-6B-an3"/>
